<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IncomBank</string>
    <string name="app_name_upper">INCOMBANK</string>
    <string name="app_title">Run and grow your business</string>
    <string name="get_started">Get started</string>

    <string name="sign_in_with_branch_code">Sign In With Branch Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_in_device_code_message">Branch Codes are created for each new branch, allowing you to sign in without ever sharing your email and password. Learn more in the Support Center</string>
    <string name="sign_in_staff_message">Staff accounts are used for clock-in/clock-out and personal working. Learn more in the Support Center</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_msg_an_error_has_occurred">Error occurred</string>
    <string name="alert_btn_go_to_settings">Go to settings</string>
    <string name="alert_btn_negative">No</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="clock_in_out">Clock In/Out</string>
    <string name="cancel_clock_in_out">Cancel Clock In/Out</string>
    <string name="start_shift">Start shift</string>
    <string name="end_shift">End shift</string>
    <string name="name">Name</string>
    <string name="continue_string">Continue</string>
    <string name="clock_in">Clock in</string>
    <string name="clock_out">Clock out</string>
    <string name="dashboard">Dashboard</string>
    <string name="contract">Contract</string>
    <string name="profile">Profile</string>
    <string name="find_loan_profiles_via">Find loan profiles via</string>
    <string name="find">Find</string>
    <string name="loan_id">Loan ID</string>
    <string name="customer_name">Customer name</string>
    <string name="loan_type">Loan type</string>
    <string name="loan_profiles_list">Loan profiles list</string>
    <string name="create">Create +</string>
    <string name="status">Status</string>
    <string name="date_created">Date created</string>
    <string name="money_to_loan">Money to loan</string>
    <string name="back">Back</string>
    <string name="customer">Customer</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_plus">+</string>
    <string name="search_customer_via_name">Search customer via name…</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="next_button">Next &gt;</string>
    <string name="previous_button">&lt; Previous</string>
    <string name="loan_profile_information">Loan profile information</string>
    <string name="staff_name">Staff Name</string>
    <string name="loan_duration">Loan Duration</string>
    <string name="benefit_from_loan">Benefit from loan</string>
    <string name="loan_purpose">Loan purpose</string>
    <string name="expected_source_money_to_repay">Expected source money to repay</string>
    <string name="collateral">Collateral</string>
    <string name="add_one_or_many_proofs_of_income">+ Add one or many proofs of income</string>
    <string name="add_signature_image">+ Add signature image</string>
    <string name="signature_image">Signature image</string>
    <string name="proof_of_income">Proof of income</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="check_information">Check information</string>
    <string name="save">Save</string>
    <string name="customer_info">Customer info</string>
    <string name="customer_id">Customer ID</string>
    <string name="customer_type">Customer Type</string>
    <string name="loan_profile_detail">Loan profile detail</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="signature">Signature</string>
    <string name="loan_profile">Loan profile</string>
    <string name="current_balance">Current balance</string>
    <string name="pending">pending</string>
    <string name="done">done</string>
    <string name="rejected">rejected</string>

    <!--Contract-->
    <string name="find_contract_via">Find contract via</string>
    <string name="loan_contract_list">Loan contract list</string>
    <string name="contract_number">Contract number</string>
    <string name="staff_in_charge">Staff in charge</string>
    <string name="bod_in_charge">BOD in charge</string>
    <string name="bod_signature">BOD signature</string>
    <string name="loan_profile_number">Profile number</string>
    <string name="phone_number">Phone number</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="create_contract">Create contract +</string>
    <string name="create_loan_contract">Create loan contract</string>
    <string name="branch_address">Branch address</string>
    <string name="commitment">Commitment</string>
    <string name="upload">Upload</string>
    <string name="loan_contract">Loan contract</string>
    <string name="loan_contract_detail">Loan contract detail</string>
    <string name="contract_signature">Contract signature</string>
    <string name="disburse_certificate_list">Disburse certificate list</string>
    <string name="add">Add</string>
    <string name="certificate_number">Certificate number</string>
    <string name="amount">Amount</string>
    <string name="payment_receipt_list">Payment receipt list</string>
    <string name="receipt_number">Receipt number</string>
    <string name="there_is_no_data_for_chart">There is no data for chart</string>
    <string name="chart">Chart</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="total">Total</string>
    <string name="find_application_via">Find application via</string>
    <string name="application_type">Application type</string>
    <string name="application_number">Application number</string>
    <string name="application_list">Application list</string>
    <string name="liquidation_application">Liquidation application</string>
    <string name="exemption_application">Exemtion application</string>
    <string name="extension_application">Extension application</string>
    <string name="create_">Create</string>
    <string name="reason">Reason</string>
    <string name="identity_number">Identity number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="find_customer_via">Find customer via</string>
    <string name="customer_list">Customer list</string>
    <string name="extension_decisions">Extension decisions</string>
    <string name="exemption_decisions">Exemption decisions</string>
    <string name="liquidation_decisions">Liquidation decisions</string>
    <string name="decision_number">Decision number</string>
    <string name="resident_customer">Resident customer</string>
    <string name="business_customer">Business customer</string>
    <string name="email_optional">Email (optional)</string>
    <string name="identity_card_created_date">Identity card created date</string>
    <string name="address">Address</string>
    <string name="permanent_residence">Permanent residence</string>
    <string name="company_rules">Company rules</string>
    <string name="business_registration_certificate">Business registration certificate</string>
    <string name="past_year">Past year</string>
    <string name="this_year">This year</string>
    <string name="recent_contracts">Recent contracts</string>
    <string name="new_disburse_certificate">New disburse certificate</string>
    <string name="left">left</string>
    <string name="edit">Edit</string>
    <string name="statistic">Statistic</string>
    <string name="deposit">Deposit</string>
    <string name="add_balance">Add balance</string>
    <string name="total_disbursement">Total disbursement</string>
    <string name="total_payment">Total payment</string>
    <string name="revenue_by_type">Revenue by type</string>
    <string name="recent_service_used">Recent service used</string>
    <string name="extension_duration">Extension duration</string>

</resources>