<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_8sdp">

        <TextView
            style="@style/ContractListTableTextHeader"
            android:text="@string/loan_profile_number" />

        <TextView
            style="@style/ContractListTableTextHeader"
            android:text="@string/customer_name" />

        <TextView
            style="@style/ContractListTableTextHeader"
            android:text="@string/status" />

        <TextView
            style="@style/ContractListTableTextHeader"
            android:text="@string/loan_type" />

        <TextView
            style="@style/ContractListTableTextHeader"
            android:text="@string/date_created" />

        <TextView
            style="@style/ContractListTableTextHeader"
            android:text="@string/money_to_loan" />

</LinearLayout>