<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.example.bankmanagement.models.LoanProfile" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginVertical="@dimen/_2sdp">

        <TextView
            android:id="@+id/loanNumberTv"
            style="@style/ContractListTableTextItem"
            isLinkText="@{true}"
            android:text="@{item.loanApplicationNumber}"
            tools:text="@string/loan_id" />

        <TextView
            style="@style/ContractListTableTextItem"
            android:text="@{item.customer.name}"
            tools:text="@string/customer_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                style="@style/StatusTextView"
                statusSpan="@{item.loanStatus}"
                tools:text="@string/status" />

        </LinearLayout>

        <TextView
            style="@style/ContractListTableTextItem"
            android:text="@{item.loanType.getName()}"
            tools:text="@string/loan_type" />

        <TextView
            style="@style/ContractListTableTextItem"
            bindCommonDate="@{item.createdAt}"
            tools:text="@string/date_created" />

        <TextView
            style="@style/ContractListTableTextItem"
            price="@{item.moneyToLoan}"
            tools:text="@string/money_to_loan" />

    </LinearLayout>
</layout>