<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_height="@dimen/_18sdp"
            android:layout_width="wrap_content"
            android:layout_marginVertical="@dimen/default_margin"
            android:src="@drawable/app_icon"/>

        <ImageView
            android:layout_height="@dimen/_170sdp"
            android:layout_width="match_parent"
            android:src="@drawable/image_welcome"/>

        <TextView
            style="@style/TextPoppins.Bold.Wrap"
            android:textColor="@color/secondaryText"
            android:textSize="@dimen/_16ssp"
            android:text="@string/app_name_upper"/>

        <TextView
            style="@style/TextPoppins.Regular.Wrap"
            android:textColor="@color/secondaryText"
            android:textSize="@dimen/_8ssp"
            android:text="@string/app_title"/>
        
        <com.google.android.material.button.MaterialButton
            style="@style/ButtonDefault"
            android:layout_height="@dimen/_24sdp"
            android:layout_width="@dimen/_180sdp"
            android:layout_marginTop="@dimen/space_8"
            app:cornerRadius="@dimen/_6sdp"
            android:text="@string/get_started"
            android:textSize="@dimen/_8ssp"/>

    </LinearLayout>

</layout>