<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.bankmanagement.view_models.review_customer.EditCustomerInfoViewModel" />

        <variable
            name="mainVM"
            type="com.example.bankmanagement.view_models.MainViewModel" />

        <import type="com.example.bankmanagement.models.StaffRole" />

        <import type="com.example.bankmanagement.models.LoanStatus" />

        <import type="com.example.bankmanagement.models.customer.CustomerType" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_primary_background_left_corner_30sdp"
        android:orientation="vertical"
        tools:layout_width="@dimen/_245sdp">

        <TextView
            style="@style/TextTitleH2SemiBold"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/_8sdp"
            android:text="@{`Edit customer(`+viewModel.type.name+`)`}"
            android:textColor="@color/secondaryText"
            tools:text="Edit customer (Resident)" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/DashboardTextContentNormal"
                    android:text="@string/name" />

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomerEditText"
                    android:text="@={viewModel.name}"

                    />
            </LinearLayout>

            <Space
                android:layout_width="@dimen/_8sdp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/DashboardTextContentNormal"
                    android:text="@string/phone_number" />

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomerEditText"
                    android:text="@={viewModel.phoneNumber}"

                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView

                    style="@style/DashboardTextContentNormal"
                    android:text="@string/identity_number" />

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomerEditText"
                    android:text="@={viewModel.identityNumber}" />
            </LinearLayout>

            <Space
                android:layout_width="@dimen/_8sdp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/DashboardTextContentNormal"
                    android:text="@string/identity_card_created_date" />

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomerEditText"
                    bindDateTime="@{viewModel.identityCreatedDate}"
                    android:focusable="false"
                    android:onClick="@{(v)->viewModel.pickIdentityCreatedDate(v)}" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/DashboardTextContentNormal"
                    android:text="@string/email_optional" />

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomerEditText"
                    android:text="@={viewModel.email}"

                    />
            </LinearLayout>

            <Space
                android:layout_width="@dimen/_8sdp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="@{viewModel.type==CustomerType.Resident?View.VISIBLE:View.INVISIBLE}"
                tools:visibility="invisible">

                <TextView
                    style="@style/DashboardTextContentNormal"
                    android:text="@string/date_of_birth" />

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomerEditText"
                    bindDateTime="@{viewModel.dateOfBirth}"
                    android:focusable="false"
                    android:onClick="@{(v)->viewModel.pickDob(v)}" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="vertical">

            <TextView

                style="@style/DashboardTextContentNormal"
                android:text="@string/address" />

            <com.google.android.material.textfield.TextInputEditText
                style="@style/CustomerEditText"
                android:layout_width="match_parent"
                android:text="@={viewModel.address}"


                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="vertical"
            android:visibility="@{viewModel.type==CustomerType.Resident?View.VISIBLE:View.GONE}"
            tools:visibility="visible">

            <TextView
                style="@style/DashboardTextContentNormal"
                android:text="@string/permanent_residence" />

            <com.google.android.material.textfield.TextInputEditText
                style="@style/DashboardEditTextFilter"
                android:layout_width="match_parent"
                android:text="@={viewModel.permanentResidence}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="vertical"
            android:visibility="@{viewModel.type==CustomerType.Business?View.VISIBLE:View.GONE}">

            <TextView

                style="@style/DashboardTextContentNormal"
                android:text="@string/company_rules" />

            <com.google.android.material.textfield.TextInputEditText
                style="@style/CustomerEditText"
                android:layout_width="match_parent"
                android:text="@={viewModel.companyRules}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{viewModel.type==CustomerType.Business?View.VISIBLE:View.GONE}">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp">

                <TextView
                    style="@style/DashboardTextContentNormal"
                    android:text="@string/business_registration_certificate" />

                <LinearLayout
                    android:id="@+id/pickBusinessCert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal"
                    android:visibility="@{viewModel.businessCert==null?View.VISIBLE:View.GONE}">

                    <TextView
                        style="@style/DashboardTextContentNormal"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:text="@string/upload"
                        android:textColor="@color/blue_link" />

                    <ImageView
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="@dimen/_8sdp"
                        android:src="@drawable/ic_upload" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/_134sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:visibility="@{viewModel.businessCert!=null?View.VISIBLE:View.GONE}">

                <ImageView
                    android:id="@+id/imageView"
                    bindImage="@{viewModel.businessCert.toString()}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    tools:src="@drawable/ic_contract" />
            </RelativeLayout>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_8sdp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                style="@style/DashboardActionButton"
                android:backgroundTint="@color/divider"
                android:text="@string/cancel"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                style="@style/DashboardActionButton"
                android:layout_marginStart="@dimen/_8sdp"
                android:onClick="@{(v)->viewModel.onSave(v)}"

                android:text="@string/save" />
        </LinearLayout>

    </LinearLayout>

</layout>