<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="currentStep"
            type="Integer"
            />

    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"

        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextTitleH2SemiBold"
            android:textSize="@dimen/_9sdp"
            android:text="@string/_1"
            android:gravity="center"
            android:textColor="@{currentStep>=1 ? @color/white : @color/secondaryText}"
            android:background="@{currentStep>=1?@drawable/circle_active_background:@drawable/circle_unactive_background,default=@drawable/circle_active_background}" />

        <View
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_3sdp"
            android:background="@{currentStep>=2?@color/cornflower_blue:@color/alto,default=@color/alto}" />

        <TextView
            style="@style/TextTitleH2SemiBold"
            android:textSize="@dimen/_9sdp"
            android:text="@string/_2"
            android:gravity="center"
            android:textColor="@{currentStep>=1 ? @color/white : @color/secondaryText}"
            android:background="@{currentStep>=2?@drawable/circle_active_background:@drawable/circle_unactive_background,default=@drawable/circle_unactive_background}"  />

        <View
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_3sdp"
            android:background="@{currentStep>=3?@color/cornflower_blue:@color/alto,default=@color/alto}" />

        <TextView
            style="@style/TextTitleH2SemiBold"
            android:textSize="@dimen/_9sdp"
            android:text="@string/_3"
            android:gravity="center"
            android:textColor="@{currentStep>=1 ? @color/white : @color/secondaryText}"
            android:background="@{currentStep>=3?@drawable/circle_active_background:@drawable/circle_unactive_background,default=@drawable/circle_unactive_background}"  />

    </LinearLayout>
</layout>
